--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,18 @@
     <title>MULE: TicTacToe</title>
     <style>canvas { width: 100%; height: 100% }</style>
 
-    <link rel="stylesheet" href="../css/stylesheet.css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
     <script src="lib/three.min.js"></script>
 
-    <script src="../lib/underscore-min.js"></script>
-    <script src="../lib/jquery-1.11.0.min.js"></script>
-    <script src="../lib/bootstrap.min.js"></script>
+    <script src="lib/underscore-min.js"></script>
+    <script src="lib/jquery-1.11.0.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
 
-    <script data-main="main" src="../lib/require.js"></script>
+    <script data-main="main" src="lib/require.js"></script>
+    <script src="lib/mule-sdk.min.js"></script>
 </head>
 <body>
 
